# 4-advanced

./: README.md
SpaceInvaders/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
SpaceInvaders/src/: AFactory.cpp  AFactory.h  Game.cpp  Game.h  SDLFactory.cpp  SDLFactory.h  SDLGame.cpp  SDLGame.h  SDLTexturemanager.cpp  SDLTexturemanager.h  Terminal.cpp  Terminal.h  main.cpp
SpaceInvaders/src/UI/: Background.cpp  Background.h
SpaceInvaders/src/gamestates/: GameStateManager.cpp  GameStateManager.h  Gamestate.cpp  Gamestate.h  GamestateAFactory.cpp  GamestateAFactory.h  GamestateSDLFactory.cpp  GamestateSDLFactory.h  Menustate.cpp  Menustate.h  SDLMenustate.cpp  SDLMenustate.h
